- Added comments to show div separations - Fixed table being centered - Fixed h2 being centered - Noticed printed table is smaller than table_header 	- The scrollbar seems to make 100% of parent div (table_container), which matches with table_header 	- Need to either make the scrollbar outside of parent div or increase size of td 	- Text is not centered in printed table

--- a/resources/css/calc.css
+++ b/resources/css/calc.css
@@ -1,10 +1,12 @@
 .container{
   margin: 0px auto;
+  width: 98%;
   padding: 10px;
   background-color: #c0c0c0;
 }
-.h2{
-align: center;
+
+h2{
+  text-align: center;
 }
 
 .loan{
@@ -26,24 +28,26 @@ align: center;
 .table_container{
 margin: .5rem auto;
 width: 50%;
-
 }
-.table-header{
 
-  clear:both;
+.table_header{
+  clear: both;
   width: 600px;
   height: 50px;
 }
 
+.table_header table{
+  height: 100%;
+  width: auto;
+}
 .table_info{
   width: 600px;
   height: 200px;
   overflow: auto;
-
 }
 
 .table_info table{
   font-family: sans-serif;
   font-size: 13px;
-  align: center;
+  text-align: center;
 }
